# ShowcaseMod

./: .gitignore  jimbaro.showcase-mod.geode
mod folder/Showcase Mod/: CMakeLists.txt  about.md  mod.json
mod folder/Showcase Mod/resources/: showcase-video-links.txt
mod folder/Showcase Mod/src/: main.cpp
